--- a/src/app/templates/category.html
+++ b/src/app/templates/category.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+
+{% block menu %}{% endblock %}
+
 {% block body %}
     <table class="table table-hover">
         <thead>
