--- a/src/app/templates/layout.html
+++ b/src/app/templates/layout.html
@@ -35,14 +35,14 @@
                     </ul>
                 </div>    
             </nav>
-            {% with messages = get_flashed_messages() %}
-            {% if messages %}
-            <ul>
-            {% for message in messages %}
-                <li>{{ message }} </li>
-            {% endfor %}
-            </ul>
-            {% endif %}
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                % if messages %}
+                    <ul>
+                    {% for category, message in messages %}
+                        <li class="{{ category }}">{{ message }}</li>
+                    {% endfor %}
+                    </ul>
+                {% endif %}
             {% endwith %}
             <hr>
             {% block body %}{% endblock %}
