--- a/src/app/templates/layout.html
+++ b/src/app/templates/layout.html
@@ -36,7 +36,7 @@
                 </div>    
             </nav>
             {% with messages = get_flashed_messages(with_categories=true) %}
-                % if messages %}
+                {% if messages %}
                     <ul>
                     {% for category, message in messages %}
                         <li class="{{ category }}">{{ message }}</li>
