add show tables in index page

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -63,9 +63,9 @@
                         <tbody>
                         {% for costs in items %}
                             <tr>
-                                <td>{{costs['cat']}}</td>
-                                <td>{{costs['sub_cat']}}</td>
-                                <td>{{costs['uah']}}</td>
+                                <td>{{costs['category_id']}}</td>
+                                <td>{{costs['category_id']}}</td>
+                                <td>{{costs['amount']}}</td>
                             </tr>
                     {% endfor %}
                     </tbody>
