add selection of parent category

--- a/src/app/templates/category.html
+++ b/src/app/templates/category.html
@@ -19,7 +19,7 @@
         <tbody>
         {% for value in data %}
             <tr>
-                <td>{{value['parent_id']}}</td>
+                <td>{{value['category_name']}}</td>
                 <td>{{value['amount']}}</td>
             </tr>
         {% endfor %}
