--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -51,10 +51,10 @@
                 <div class="mass"> {{ total }} </div>
 
             <div class="transactions-list-container panel panel-default">
+                <table class="table table-hover">
                 {% for date, items in data|groupby('date') %}
-                    <table class="table table-hover table-sm">
                         <thead>
-                            <tr class="table-success">
+                            <tr class="green-color">
                                 <th scope="col">{{ date.strftime('%d-%m-%Y') }}</th>
                                 <th></th>
                                 <th></th>
@@ -62,15 +62,15 @@
                         </thead>
                         <tbody>
                         {% for costs in items %}
-                            <tr>
+                            <tr class="small">
                                 <td>{{costs['category']['parent_category']['name']}}</td>
                                 <td>{{costs['category']['name']}}</td>
                                 <td>{{costs['amount']}}</td>
                             </tr>
                     {% endfor %}
                     </tbody>
-                    </table>
                 {% endfor %}
+                </table>
             </div>
     </div>
 {% endblock %}
