--- a/src/app/templates/layout.html
+++ b/src/app/templates/layout.html
@@ -13,41 +13,53 @@
 
     </head>
     <body>
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand mr-0 mr-md-2" href="#">Famaly wallet</a>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark">
+                <div class="container">
+                    <a class="navbar-brand" href="#"><strong>Family wallet</strong></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-                <div class="collapse navbar-collapse">
-                    {% if current_user.is_authenticated %}
-                    <div class="navbar-nav">
-                        <a class="nav-item nav-link " href="/">Home</a>
-                        <a class="nav-item nav-link" href="/category">Категории</a>
-                    </div>
-                    {% endif %}
-                    <div class="navbar-nav ml-auto">
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         {% if current_user.is_authenticated %}
-                            <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
-                        {% else %}
-                            <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+                        <div class="navbar-nav">
+                            <a class="nav-item nav-link " href="/">Home</a>
+                            <a class="nav-item nav-link" href="/category">Категории</a>
+                        </div>
                         {% endif %}
+                        <div class="navbar-nav ml-auto">
+                            {% if current_user.is_authenticated %}
+                                <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+                            {% else %}
+                                <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+                            {% endif %}
+                        </div>
                     </div>
-                </div>    
+                </div>   
             </nav>
-            {% with messages = get_flashed_messages(with_categories=true) %}
-                {% if messages %}
-                    <ul>
-                    {% for category, message in messages %}
-                        <li class="{{ category }}">{{ message }}</li>
-                    {% endfor %}
-                    </ul>
-                {% endif %}
-            {% endwith %}
-            <hr>
-            {% block body %}{% endblock %}
-            <div class="footer">
-                <span> &copy; Copyright 2017 by <a href=#>Alex</a></span>
+        </header>
+
+        <main id="content" class="mt-5 mb-5" role="main">
+            <div class="container">
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                        <ul>
+                        {% for category, message in messages %}
+                            <li class="{{ category }}">{{ message }}</li>
+                        {% endfor %}
+                        </ul>
+                    {% endif %}
+                {% endwith %}
+                {% block body %}{% endblock %}
             </div>
-        </div> 
+        </main>
+        
+        <footer class="page-footer stylish-color">
+            <div class="footer-copyright text-center py-3">&copy; 2018 Copyright:
+                        <a href="#">Family wallet</a>
+            </div>
+        </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
