--- a/src/app/static/style.css
+++ b/src/app/static/style.css
@@ -2,6 +2,7 @@
   z-index: 1;
   background-color: #43a047;
 }
+
 .green-color {
   background-color: #28a745;
   color: #fff;
@@ -63,4 +64,12 @@ footer.page-footer .footer-copyright {
 
 footer.page-footer a {
   color: #fff;
+}
+
+.btn-edit {
+  padding: .15rem .4rem;
+  font-size: .625rem;
+  line-height: 1.5;
+  border-radius: .2rem;
+  box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08);
 }
