--- a/src/app/templates/layout.html
+++ b/src/app/templates/layout.html
@@ -10,7 +10,8 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
-
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+        
     </head>
     <body>
         <header>
@@ -26,6 +27,7 @@
                         <div class="navbar-nav">
                             <a class="nav-item nav-link " href="/">Home</a>
                             <a class="nav-item nav-link" href="/category">Категории</a>
+                            <a class="nav-item nav-link" href="/budget">Бюджет</a>
                         </div>
                         {% endif %}
                         <div class="navbar-nav ml-auto">
