--- a/src/app/static/style.css
+++ b/src/app/static/style.css
@@ -20,6 +20,20 @@
   background-color: #4B515D;
 }
 
+.form-custom-select-sm {
+  height: calc(1.5125rem + 2px);
+  padding-top: .335rem;
+  padding-bottom: .375rem;
+  font-size: 65%;
+}
+
+.form-custom-control-sm{
+  padding: .25rem .5rem;
+  font-size: .669rem;
+  line-height: 1.5;
+  border-radius: .2rem;
+}
+
 .form-signin {
     max-width: 330px;
     padding: 15px;
