--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -41,15 +41,29 @@
 
         {{ test_data }}
 
+        <form action="" method="POST" class="mt-3" name="filter-form">
+            {{ form.hidden_tag() }}
+            <div class="form-row">
+                <div class="form-group col-md-3">
+                    {{ form.category(class="custom-select form-custom-select-sm", id="category") }}
+                </div>
+                <div class="form-group col-md-2">
+                    {{ form.account(class="custom-select form-custom-select-sm", id="account") }}
+                </div>
+                <div class="form-group col-md-2">
+                    {{ form.operationtype(class="custom-select form-custom-select-sm", id="operationtype") }}
+                </div>
+                <div class="form-group col-md-3">
+                    {{ form.search(class="form-control form-custom-control-sm", id="search", placeholder="Поиск по описанию") }}
+                </div>
+                <div class="form-group col-md-2">
+                    {{ form.submit(class="btn btn-success btn-sm", value="ОК")}}
+                </div>
+            </div>
+        </form>
+
+            
         <div class="card">
-                <form action="" method="POST" class="mt-3">
-                        {{ form.hidden_tag() }}
-                        {{ form.category(class="custom-select", id="category") }}
-                        {{ form.submit(class="btn btn-success", value="ОК")}}
-                </form>
-
-                <div class="mass"> {{ total }} </div>
-
             <div class="transactions-list-container panel panel-default">
                 <table class="table table-hover table-striped small">
                     <thead>
