--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -51,24 +51,25 @@
                 <div class="mass"> {{ total }} </div>
 
             <div class="transactions-list-container panel panel-default">
-                <table class="table table-hover table-striped small">
-                    <tbody>
-                {% for costs in data %}
-                            <tr>
-                                <td><input type="checkbox"></td>
-                                <td>
-                                    <button type="button" class="btn btn-outline-secondary btn-edit">
-                                        <i class="fas fa-pencil-alt"></i>
-                                    </button>
-                                </td>
-                                <td>{{ costs['date'].strftime('%d-%m-%Y') }}</td>
-                                <td>{{costs['amount']}}</td>
+                <table class="table table-hover">
+                {% for date, items in data|groupby('date') %}
+                        <thead>
+                            <tr class="green-color">
+                                <th scope="col">{{ date.strftime('%d-%m-%Y') }}</th>
+                                <th></th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        {% for costs in items %}
+                            <tr class="small">
                                 <td>{{costs['category']['parent_category']['name']}}</td>
                                 <td>{{costs['category']['name']}}</td>
-                                <td>{{costs['account']['users']['username']}} / {{costs['account']['name']}}</td>
+                                <td>{{costs['amount']}}</td>
                             </tr>
-                {% endfor %}
+                    {% endfor %}
                     </tbody>
+                {% endfor %}
                 </table>
             </div>
     </div>
