--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -23,13 +23,13 @@
                             <div class="col-sm-3 my-1">
                                 {{ add_exp_form.category(class="custom-select mb-2 mr-sm-2") }}
                             </div>
-                            <div class="col-sm-3 my-1">
-                                <label class="sr-only" for="inlineFormInputDetails">Details</label>
-                                {{ add_exp_form.details(class="form-control mb-2 mr-sm-2", id="inlineFormInputDetatils", placeholder="Статья расходов") }}
-                            </div>
                             <div class="col-auto my-1">
                                 <label class="sr-only" for="inlineFormInputSumUAH">SumUAH</label>
                                 {{ add_exp_form.sum_uah(class="form-control mb-2 mr-sm-2", id="inlineFormInputSumUAH", placeholder="UAH", required="required") }}
+                            </div>
+                            <div class="col-sm-3 my-1">
+                                <label class="sr-only" for="inlineFormInputDetails">Details</label>
+                                {{ add_exp_form.details(class="form-control mb-2 mr-sm-2", id="inlineFormInputDetatils", placeholder="Примечание") }}
                             </div>
                             <div class="col-auto my-1">
                                 {{ add_exp_form.submit(class="btn btn-primary mb-2", value="Добавить")}}
