--- a/src/app/templates/layout.html
+++ b/src/app/templates/layout.html
@@ -14,23 +14,25 @@
     </head>
     <body>
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
                 <a class="navbar-brand mr-0 mr-md-2" href="#">Famaly wallet</a>
 
                 <div class="collapse navbar-collapse">
                     {% if current_user.is_authenticated %}
-                    <div class="navbar-nav">
-                        <a class="nav-item nav-link " href="/">Home</a>
-                        <a class="nav-item nav-link" href="/category">Категории</a>
-                    </div>
+                    <ul class="navbar-nav mr-auto">
+                                <li class="nav-item">
+                                        <a class="nav-link " href="/">Home</a>
+                                        <a class="nav-link " href="/category">Категории</a>
+                                </li>
+                    </ul>
                     {% endif %}
-                    <div class="navbar-nav ml-auto">
-                        {% if current_user.is_authenticated %}
-                            <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
-                        {% else %}
-                            <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-                        {% endif %}
-                    </div>
+                    <ul class="navbar-nav my-2 my-md-0">
+                                    {% if current_user.is_authenticated %}
+                                        <li class="nav-item"><a href="{{ url_for('logout') }}">Logout</a></li>
+                                    {% else %}
+                                        <li class="nav-item"><a href="{{ url_for('login') }}">Login</a></li>
+                                    {% endif %}
+                    </ul>
                 </div>    
             </nav>
             {% with messages = get_flashed_messages(with_categories=true) %}
