--- a/src/app/templates/budget.html
+++ b/src/app/templates/budget.html
@@ -1,5 +1,23 @@
 {% extends "layout.html" %}
 
 {% block body %}
-
+    {{ test_data }}
+    <div id="month-picker">
+        <ul class="nav nav-month">
+            <li class="nav-item">
+                <a class="nav-link nav-month active" href="#">2018</a>
+            </li>   
+        </ul>    
+        <ul class="nav nav-month">
+        {%  for month in months %}
+            <li class="nav-item">
+                {% if month[2]%}
+                <a class="nav-link nav-month active" href="/budget/{{month[0]}}">{{month[1]}}</a>
+                {% else %}
+                <a class="nav-link nav-month" href="/budget/{{month[0]}}">{{month[1]}}</a>
+                {% endif %}
+            </li>
+        {% endfor %}
+        </ul>
+    </div>
 {% endblock %}
