--- a/src/app/templates/budget.html
+++ b/src/app/templates/budget.html
@@ -27,18 +27,28 @@
         <div class="card-body">
             <div class="panel border">
                 <table class="table table-hover table-striped small mb-0">
+                    <thead>
+                        <tr class="table-secondary">
+                            <th></th>
+                            <th scope="col">Категория</th>
+                            <th scope="col">План</th>
+                            <th scope="col">Факт</th>
+                        </tr>
+                    </thead>
                     {% for value in data %}
-                    <tr>
-                        <td>
-                            <button type="button" class="btn btn-outline-secondary btn-edit">
-                                <i class="fas fa-pencil-alt"></i>
-                            </button>
-                        </td>
-                        <td>{{ value['category']['name'] }}</td>
-                        <td>{{ value['limit'] }}</td>
-                        <td>{{ value['limit'] }}</td>
-                    </tr>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <button type="button" class="btn btn-outline-secondary btn-edit">
+                                    <i class="fas fa-pencil-alt"></i>
+                                </button>
+                            </td>
+                            <td>{{ value }}</td>
+                            <td>{{ value.fact }}</td>
+                            <td></td>
+                        </tr>
                     {% endfor %}
+                    </tbody>
                 </table> 
             </div>   
         </div>
