add the income div on budget page

--- a/src/app/templates/budget.html
+++ b/src/app/templates/budget.html
@@ -20,6 +20,18 @@
         {% endfor %}
         </ul>
     </div>
+
+    <div class="card mb-5">
+        <div class="card-header bg-success text-white">
+            Доходы
+        </div>
+        <div class="card-body">
+            <div class="panel border">
+
+            </div>
+        </div>
+    </div>
+
     <div class="card">
         <div class="card-header bg-danger text-white">
             Расходы
