--- a/src/app/templates/budget.html
+++ b/src/app/templates/budget.html
@@ -22,17 +22,6 @@
     </div>
 
     <div class="card mb-5">
-        <div class="card-header bg-success text-white">
-            Доходы
-        </div>
-        <div class="card-body">
-            <div class="panel border">
-
-            </div>
-        </div>
-    </div>
-
-    <div class="card">
         <div class="card-header bg-danger text-white">
             Расходы
         </div>
@@ -76,6 +65,29 @@
                     {{ form.amount(class="form-control col-sm-3", placeholder="Сумма", required="required", **{'aria-label':'amount', 'aria-describedby':'button-addon'}) }}   
                     <div class="input-group-append">
                         {{ form.submit(class="btn btn-outline-danger", id="button-addon", value="Добавить")}}
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-header bg-success text-white">
+            Доходы
+        </div>
+        <div class="card-body">
+            <div class="panel border">
+
+            </div>
+        </div>
+        <div class="card-footer">
+            <form action="" method="POST" name="add-incbudget-form">
+                {{ form_inc_budget.hidden_tag() }}
+                <div class="input-group col-sm-7">
+                    {{ form_inc_budget.category(class="form-control", placeholder="Категория дохода") }}
+                    {{ form_inc_budget.amount(class="form-control col-sm-3", placeholder="Сумма", required="required", **{'aria-label':'amount', 'aria-describedby':'button-addon'}) }}   
+                    <div class="input-group-append">
+                        {{ form_inc_budget.submit(class="btn btn-outline-success", id="button-addon", value="Добавить")}}
                     </div>
                 </div>
             </form>
