--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -1,6 +1,19 @@
 {% extends "layout.html" %}
 {% block body %}
-       <div class="card mb-3">
+<div class="row shadow bg-white rounded">
+    <div class="col-12 col-md-3 col-xl-5 pt-3 pb-3">
+        <div class="card"> 
+            <div class="card-header">
+                Cash
+            </div>
+            <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Alex's wallet</li>
+                    <li class="list-group-item">Alice's wallet</li>
+            </ul>
+        </div>    
+    </div>
+    <div class="col-12 col-md-3 col-xl-7 pt-3 pb-3">  
+        <div class="card">
             <div class="card-header">
                 <ul class="nav nav-tabs card-header-tabs">
                     <li class="nav-item">
@@ -9,60 +22,47 @@
                     <li class="nav-item">
                         <a class="nav-link text-success" href="#">Добавить доходы</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-success" href="#">Переводы</a>
+                    </li>
                 </ul>
             </div>    
             <div class="card-body"> 
                 <form action="" method="POST" name="add-exp-form">
                         {{ add_exp_form.hidden_tag() }}
-                        <div class="form-row align-items-center">
-                            <div class="col-auto my-1">
-                                <label class="sr-only" for="inlineFormInputDate">Date</label>
-                                {{ add_exp_form.date(class="form-control mb-2 mr-sm-2", id="inlineFormInputDate", placeholder="Дата", autocomplete="off") }}
+                        <div class="form-row align-items-end">
+                            <div class="form-group col-sm-9">
+                                <label class="font-weight-600" for="inlineFormInputAccount">Счет</label>
+                                {{ add_exp_form.account(class="fw-input form-control mb-2 mr-sm-2", id="inlineFormInputAccount", placeholder="Счет") }}
                             </div>
-                            <div class="col-sm-3 my-1">
-                                {{ add_exp_form.category(class="form-control mb-2 mr-sm-2", placeholder="Категория") }}
-                            </div>
-                            <div class="col-sm-3 my-1">
-                                <label class="sr-only" for="inlineFormInputDetails">Details</label>
-                                {{ add_exp_form.categorydes(class="form-control mb-2 mr-sm-2", placeholder="Описание")}}
-                            </div>
-                            <div class="col-auto my-1">
+                            <div class="form-group col-sm-3">
                                 <label class="sr-only" for="inlineFormInputSumUAH">SumUAH</label>
-                                {{ add_exp_form.sum_uah(class="form-control mb-2 mr-sm-2", id="inlineFormInputSumUAH", placeholder="UAH", required="required") }}
+                                 {{ add_exp_form.sum_uah(class="fw-input form-control mb-2 mr-sm-2", id="inlineFormInputSumUAH", placeholder="UAH", required="required") }}    
                             </div>
-                            <div class="col-auto my-1">
-                                {{ add_exp_form.submit(class="btn btn-primary mb-2", value="Добавить")}}
+                        </div>
+                        <div class="form-row align-items-end">
+                                <div class="col-sm-9 mb-1">
+                                    <label class="font-weight-600" for="сategory">Категория</label>
+                                    {{ add_exp_form.category(class="fw-input form-control mb-2 mr-sm-2", placeholder="Выбрать категорию или добавить новую") }}
+                                </div>
+                                <div class="col-sm-3 mb-1">
+                                    <label class="sr-only" for="inlineFormInputDate">Date</label>
+                                    {{ add_exp_form.date(class="fw-input form-control mb-2 mr-sm-2", id="inlineFormInputDate", placeholder="Дата", autocomplete="off") }}
+                                </div>
+                            <div class="col-sm-9">
+                                {{ add_exp_form.categorydes(class="fw-input form-control mb-2 mr-sm-2", placeholder="Описание")}}
+                            </div>
+                            <div class="col-sm-3">
+                                {{ add_exp_form.submit(class="fw-input w-100 btn btn-primary mb-2", value="Добавить")}}
                             </div>
                         </div>
                 </form>
             </div>  
         </div>
-
+    </div>
+</div>
         {{ test_data }}
-
-        
-        <form action="" method="POST" class="mt-3" name="filter-form">
-            {{ form.hidden_tag() }}
-            <div class="form-row">
-                <div class="form-group col-md-3">
-                    {{ form.filter_form_category(class="custom-select form-custom-select-sm", id="filterFormCategory") }}
-                </div>
-                <div class="form-group col-md-2">
-                    {{ form.account(class="custom-select form-custom-select-sm", id="filterFormAccount") }}
-                </div>
-                <div class="form-group col-md-2">
-                    {{ form.operationtype(class="custom-select form-custom-select-sm", id="filterFormOperationtype") }}
-                </div>
-                <div class="form-group col-md-3">
-                    {{ form.search(class="form-control form-custom-control-sm", id="filterFormSearch", placeholder="Поиск по описанию") }}
-                </div>
-                <div class="form-group col-md-2">
-                    {{ form.submit(class="btn btn-success btn-sm", value="ОК")}}
-                </div>
-            </div>
-        </form>
-
-            
+             
         <div class="card">
             <div class="transactions-list-container panel panel-default">
                 <table class="table table-hover table-striped small">
