--- a/src/app/templates/layout.html
+++ b/src/app/templates/layout.html
@@ -13,54 +13,85 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg navbar-dark">
-                <div class="container">
-                    <a class="navbar-brand" href="#"><strong>Family wallet</strong></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+                <nav class="navbar navbar-expand-lg navbar-dark">
+                        <div class="container">
+                            <a class="navbar-brand" href="#"><strong>Family wallet</strong></a>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                <div class="navbar-nav ml-auto">
+                                    {% if current_user.is_authenticated %}
+                                        <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+                                    {% else %}
+                                        <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+                                    {% endif %}
+                                </div>
+                            </div>
+                        </div>   
+                    </nav>
 
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        {% if current_user.is_authenticated %}
-                        <div class="navbar-nav">
-                            <a class="nav-item nav-link " href="/">Home</a>
-                            <a class="nav-item nav-link" href="/category">Категории</a>
-                            <a class="nav-item nav-link" href="/budget">Бюджет</a>
-                        </div>
-                        {% endif %}
-                        <div class="navbar-nav ml-auto">
-                            {% if current_user.is_authenticated %}
-                                <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
-                            {% else %}
-                                <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-                            {% endif %}
-                        </div>
-                    </div>
-                </div>   
-            </nav>
         </header>
 
-        <main id="content" class="mt-5 mb-5" role="main">
-            <div class="container">
-                {% with messages = get_flashed_messages(with_categories=true) %}
-                    {% if messages %}
-                        <ul>
-                        {% for category, message in messages %}
-                            <li class="{{ category }}">{{ message }}</li>
-                        {% endfor %}
-                        </ul>
-                    {% endif %}
-                {% endwith %}
-                {% block body %}{% endblock %}
+            <div class="container-fluid">
+                <div class="row">
+                    {% if current_user.is_authenticated %}
+                    <div class="col-12 col-md-3 col-xl-1 bd-sidebar shadow bg-white rounded">
+                        <div class="btn-group-vertical">
+                                <a class="btn btn-light btn-block menu-icon" role="button" aria-disabled="true" href="/">
+                                    <i class="far fa-newspaper"></i>
+                                    Dashboard
+                                </a>
+                                <a class="btn btn-light btn-block menu-icon" role="button" aria-disabled="true" href="/">
+                                    <i class="far fa-newspaper"></i>
+                                    Транзакции
+                                </a>
+                                <a class="btn btn-light btn-block menu-icon" role="button" aria-disabled="true" href="/">
+                                    <i class="far fa-newspaper"></i>
+                                    Счета
+                                </a>
+                                <a class="btn btn-light btn-block menu-icon" role="button" aria-disabled="true" href="/">
+                                    <i class="far fa-newspaper"></i>
+                                    Отчеты
+                                </a>
+                                <a class="btn btn-light btn-block menu-icon" role="button" aria-disabled="true" href="/budget">
+                                    <i class="far fa-newspaper"></i>
+                                    Бюджет
+                                </a>
+                                <a class="btn btn-light btn-block menu-icon" role="button" aria-disabled="true" href="/">
+                                    <i class="far fa-newspaper"></i>
+                                    Настройки
+                                </a>
+                        </div>
+                    </div>
+                    <main class="col-12 col-md-9 col-xl-11 py-md-3 pl-md-5 bd-content" role="main">
+                    {% else %}
+                    <main class="bd-content" role="main">
+                    {% endif %} 
+                        <div class="container">
+                            {% with messages = get_flashed_messages(with_categories=true) %}
+                                {% if messages %}
+                                    <ul>
+                                    {% for category, message in messages %}
+                                        <li class="{{ category }}">{{ message }}</li>
+                                    {% endfor %}
+                                    </ul>
+                                {% endif %}
+                            {% endwith %}
+                            {% block body %}{% endblock %}
+                        </div>
+                    </main>
+                </div>    
             </div>
-        </main>
         
         <footer class="page-footer stylish-color">
             <div class="footer-copyright text-center py-3">&copy; 2018 Copyright:
-                        <a href="#">Family wallet</a>
+                <a href="#">Family wallet</a>
             </div>
         </div>
 
