added account type

--- a/src/app/templates/layout.html
+++ b/src/app/templates/layout.html
@@ -51,8 +51,8 @@
                                     <i class="far fa-newspaper"></i>
                                     Транзакции
                                 </a>
-                                <a class="btn btn-light btn-block menu-icon" role="button" aria-disabled="true" href="/">
-                                    <i class="far fa-newspaper"></i>
+                                <a class="btn btn-light btn-block menu-icon" role="button" aria-disabled="true" href="/accounts">
+                                    <i class="fas fa-credit-card"></i>
                                     Счета
                                 </a>
                                 <a class="btn btn-light btn-block menu-icon" role="button" aria-disabled="true" href="/">
