--- a/src/app/static/style.css
+++ b/src/app/static/style.css
@@ -22,6 +22,16 @@ main {
   margin-left: -15px;
 }
 
+.basic-buttons {
+  box-shadow: 0 1px 2px 0 rgba(34,36,38,.15);
+  border: 1px solid rgba(34,36,38,.15);
+  border-radius: .28571429rem;
+}
+
+.input-right {
+  text-align: right!important;
+}
+
 .font-weight-600{
   font-weight: 600!important;
 }
@@ -111,6 +121,10 @@ main {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
   }
+
+.account-widget-header {
+  cursor: pointer;
+}
 
 footer.page-footer .footer-copyright {
     overflow: hidden;
