--- a/src/app/templates/accounts.html
+++ b/src/app/templates/accounts.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
 {% block body %}
+
+{{ test_data }}
+
 <div class="row shadow bg-white rounded">
     <div class="bg-light w-100 p-3 border-top border-right border-left">
       <button type="button" class="btn btn-light basic-buttons" data-toggle="modal" data-target="#ModalNewAccount">
@@ -28,44 +31,42 @@
                     {{ add_acc_form.group(class="fw-input form-control", id="inlineFormInputGroup", placeholder="Тип счета") }}
                   </div>
                 </div> 
+
                 <div class="form-row">
-                  <div class="form-group col-md-6">
-                    <div class="form-check">
-                      {{ add_acc_form.currency_uah (class="form-check-input", type="checkbox", id="inlineFormCheckboxUAH")}}
-                      <label class="form-check-label" for="inlineFormCheckboxUAH">UAH</label>
+                  <div class="col-md-6">
+                  <div class="form-group">
+                      
+                        {{ add_acc_form.currency (class="list-unstyled")}}
+                      
                     </div>
-                  </div>
-                  <div class="form-group col-md-6">
-                      <div class="input-group">
-                        {{ add_acc_form.balance_uah(class="fw-input form-control input-right", id="inlineFormBalanceUAH", placeholder="Баланс") }}
-                        <div class="input-group-append">
-                            <span class="input-group-text">UAH</span>
-                        </div>
-                      </div>
-                  </div>
 
-                  <div class="form-group col-md-6">
-                    <div class="form-check">
-                      {{ add_acc_form.currency_usd (class="form-check-input", type="checkbox", id="inlineFormCheckboxUSD")}}
-                      <label class="form-check-label" for="inlineFormCheckboxUSD">USD</label>
-                    </div>
-                  </div>
-                  <div class="form-group col-md-6">
-                      <div class="input-group">
-                        {{ add_acc_form.balance_usd(class="fw-input form-control input-right", id="inlineFormBalanceUSD", placeholder="Баланс") }}
-                        <div class="input-group-append">
-                            <span class="input-group-text">USD</span>
-                        </div>
-                      </div>  
-                  </div>
-
-                  <div class="form-group col-md-6">
+                    <div class="form-group">
                       <div class="form-check">
-                        {{ add_acc_form.currency_eur (class="form-check-input", type="checkbox", id="inlineFormCheckboxEUR")}}
-                        <label class="form-check-label" for="inlineFormCheckboxEUR">EUR</label>
+                        {{ add_acc_form.visibility (class="form-check-input", type="checkbox", id="inlineFormVisibility")}}
+                        <label class="form-check-label" for="inlineFormVisibility">Отображать на главной</label>
                       </div>
                     </div>
-                    <div class="form-group col-md-6">
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                        <div class="input-group">
+                          {{ add_acc_form.balance_uah(class="fw-input form-control input-right", id="inlineFormBalanceUAH", placeholder="Баланс") }}
+                          <div class="input-group-append">
+                              <span class="input-group-text">UAH</span>
+                          </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="input-group">
+                          {{ add_acc_form.balance_usd(class="fw-input form-control input-right", id="inlineFormBalanceUSD", placeholder="Баланс") }}
+                          <div class="input-group-append">
+                              <span class="input-group-text">USD</span>
+                          </div>
+                        </div>  
+                    </div>
+
+                    <div class="form-group">
                         <div class="input-group">
                           {{ add_acc_form.balance_eur(class="fw-input form-control input-right", id="inlineFormBalanceEUR", placeholder="Баланс") }}
                           <div class="input-group-append">
@@ -74,16 +75,11 @@
                         </div>  
                     </div>
 
-                    <div class="form-group col-md-6">
-                        <div class="form-check">
-                          {{ add_acc_form.visibility (class="form-check-input", type="checkbox", id="inlineFormVisibility")}}
-                          <label class="form-check-label" for="inlineFormVisibility">Отображать на главной</label>
-                        </div>
-                      </div>
-                      <div class="form-group col-md-6">
+                      <div class="form-group">
                         {{ add_acc_form.submit(class="fw-input w-100 btn btn-primary", value="Добавить счет")}} 
                       </div>
-                </div>
+                    </div>
+                  </div>
               </form>
             </div>
             <div class="modal-footer">
